# Minivan-Dads

./: .env.example  .gitignore  CLAUDE.md  Minivan Dads HQ.bat  README.md  board-meeting-demo.html  ceo-dashboard-demo.html  minivan-dads-boardroom-dashboard-spec.md  project-context.md  project-memory.md  pyproject.toml  requirements.txt
.claude/commands/: end-of-day.md  new-project.md  start-of-day.md
.github/workflows/: market-intel.yml
brain/: __main__.py  agent.py  boardroom.py  collaborate.py  config.py  config.yaml  executor.py  governance.py  hq.py  interaction.py  llm.py  main.py  meeting.py  models.py  pricing.py  products.py  prompts.py  records.py  tools.py
brain/actions/: __init__.py  limits.py  limits.yaml  models.py  registry.py
brain/connectors/: __init__.py  etsy.py  printful.py  shopify.py
brain/dashboard/: __init__.py  app.py  chat.py
brain/prompts/: agent_core.md  ask.md  boardroom_moderator.md  boardroom_participant.md  boardroom_synthesis.md  collaborate.md  consult.md  directive.md  discussion.md  ingest.md  meeting_synthesis.md  system_core.md
docs/: Daily-Workflow.txt  Project-Instructions.txt  Session-0-Project-Kickoff.txt  design-to-store-pipeline.md
docs/specs/: minivan-dads-action-layer-spec.md  minivan-dads-brain-project-brief.md  minivan-dads-phase-roadmap.md  minivan-dads-progress-summary.md
garage/: README.md  store-review-2026-07-23.md
garage/design/: README.md  assets-manifest.json  assets-manifest.md  assets-manifest.seed.yaml  compose_preview.py  create_printful_product.py  push_printful_product.py  quiet-game-tee-2026-07-19.md  reconcile_assets.py  shopify-live-note.md  shopify_token_exchange.py
garage/prints/: derive_prints.py  verify_print.py  workflow-cheat-sheet.html
garage/research/: dad-brand-hats-and-patches-2026-07-19.md  dad-sayings-and-roadtrip-oneliners-2026-07-19.md  joshballart-phase0-print-partner-2026-07-21.md  (+1 more)
hq/actions/: log.jsonl  (+2 more)
tests/: conftest.py  fake_connector.py  fake_llm.py  test_agent.py  test_boardroom.py  test_chat.py  test_collaborate.py  test_commands.py  test_dashboard.py  test_dashboard_costs.py  test_executor.py  test_governance.py  test_hq_decisions.py  test_hq_directives.py  test_hq_escalations.py  test_hq_llm_usage.py  test_hq_meetings.py  test_hq_reports.py  test_hq_research_exhibits.py  test_interaction.py  test_limits.py  test_llm_tools.py  test_llm_truncation.py  test_llm_usage_logging.py  test_pricing.py  test_printful_connector.py  test_products.py  test_records.py  test_shopify_connector.py  test_storefront_agent.py  test_sync_and_discuss.py  test_tools.py
(+51 files in other folders)
