[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minivan-dads-brain"
version = "0.1.0"
description = "The Brain — COO orchestrator for Minivan Dads Inc."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv",
    "PyYAML",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
brain = "brain.main:cli"

[tool.setuptools]
packages = ["brain", "brain.actions", "brain.dashboard"]

[tool.setuptools.package-data]
brain = ["prompts/*.md", "config.yaml", "dashboard/static/*"]
