[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minivan-dads-brain"
version = "0.1.0"
description = "The Brain — COO orchestrator for Minivan Dads Inc."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv",
    "PyYAML",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
# Garage-only tooling (the garage-design skill's flat-preview compositing
# step) — not a brain/ app dependency, never imported by anything under
# brain/. Install with: pip install -e ".[garage]"
# svglib+reportlab rasterize the SVG; pycairo/rlPyCairo is reportlab's
# renderPM backend (its default "pil" backend was dropped in reportlab
# 4+). cairosvg was tried first — its cairocffi dependency needs a
# system Cairo install that doesn't exist on Windows without a separate
# GTK3 runtime installer; this stack avoids that entirely via pycairo's
# self-contained Windows wheel.
garage = ["svglib", "reportlab", "pycairo", "rlPyCairo", "Pillow"]

[project.scripts]
brain = "brain.main:cli"

[tool.setuptools]
packages = ["brain", "brain.actions", "brain.dashboard"]

[tool.setuptools.package-data]
brain = ["prompts/*.md", "config.yaml", "dashboard/static/*"]
